# rust-monster

./: .travis.yml  Cargo.toml  LICENSE  README.md  notes.txt
src/: ga.rs  lib.rs
src/ga/: ga_core.rs  ga_population.rs  ga_random.rs  ga_scaling.rs  ga_selectors.rs  ga_simple.rs  ga_statistics.rs  ga_test.rs  mod.rs
tests/: lib.rs
