[package]
name = "rust-monster"
version = "0.1.0"
authors = ["El Jacko <eljacko@revolutionsolid.com>", "Ricardo Sisnett <sysnet@revolutionsolid.com>"]

description = "GALib rust port"
license = "MIT"
homepage = "https://www.github.com/mrjackinc/rust-monster"

#TODO
documentation = "https://www.github.com/mrjackinc/rust-monster"
repository = "https://www.github.com/mrjackinc/rust-monster"



[dependencies]
bitflags = "0.5.0"
log = "0.3.6"
rand = "0.3"

[dev-dependencies]
env_logger = "0.3.2"
